# A3Mailer

./: .gitignore  A3MAILER_PROJECT_SUMMARY.md  A3MAILER_中文说明书.md  AI_WEB3_FEATURES.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_RULES.md  Dockerfile  Dockerfile.dev  GITHUB_UPDATE_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  Makefile  PLACEHOLDER_CRATES_SUMMARY.md  README.md  README_CN.md  ROADMAP.md  SECURITY_PROCESS.md  ULTIMATE_PRODUCTION_COMPLETION.md  cleanup_docs.sh  create_placeholder_files.sh  docker-compose.dev.yml  docker-compose.yml  install.sh  push_to_github.sh  push_when_ready.sh  rename_project.py  simple_upload.sh  test-a3mailer-config.toml  update_copyright.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ai-web3-tests.yml  ci.yml  coverage.yml  quality.yml  release.yml  test.yml
LICENSES/: LicenseRef-SEL.txt
api/v1/: openapi.yml
config/: a3mailer.toml
crates/alerting/: Cargo.toml
crates/alerting/src/: alert.rs  channels.rs  config.rs  engine.rs  error.rs  escalation.rs  lib.rs  metrics.rs  rules.rs  suppression.rs  templates.rs
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: auth.rs  cache.rs  circuit_breaker.rs  config.rs  error.rs  gateway.rs  lib.rs  load_balancer.rs  manager.rs  middleware.rs  rate_limiter.rs  router.rs  transform.rs
crates/backup-restore/: Cargo.toml
crates/backup-restore/src/: backup.rs  compression.rs  config.rs  encryption.rs  error.rs  lib.rs  metrics.rs  restore.rs  scheduler.rs  storage.rs
crates/cli/: Cargo.toml  IMPROVEMENTS.md  README.md
crates/cli/src/: lib.rs  main.rs
crates/cluster-management/: Cargo.toml
crates/cluster-management/src/: config.rs  consensus.rs  discovery.rs  error.rs  health.rs  leader.rs  lib.rs  metrics.rs  node.rs  state.rs  sync.rs
crates/common/: Cargo.toml  IMPROVEMENTS.md  PRODUCTION_ENHANCEMENTS.md  README.md
crates/common/benches/: auth_benchmarks.rs  performance_benchmarks.rs
crates/common/src/: addresses.rs  core.rs  core_tests.rs  (+5 more)
crates/compliance/: Cargo.toml
crates/compliance/src/: audit.rs  ccpa.rs  classification.rs  config.rs  error.rs  gdpr.rs  hipaa.rs  lib.rs  manager.rs  metrics.rs  privacy.rs  retention.rs
crates/dav/: CONCURRENCY_IMPROVEMENTS.md  Cargo.toml  FINAL_PERFORMANCE_SUMMARY.md  IMPROVEMENTS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_NEW.md  TEST_COVERAGE_REPORT.md  config.example.toml
crates/dav-proto/: Cargo.toml
crates/dav/src/: async_pool.rs  cache.rs  concurrency.rs  config.rs  connection_pool.rs  data_access.rs  high_performance.rs  lib.rs  monitoring.rs  performance.rs  request.rs  router.rs  security.rs  server.rs  test_utils.rs
crates/dav/src/calendar/: copy_move.rs  delete.rs  freebusy.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  query.rs  scheduling.rs  update.rs
crates/dav/src/card/: copy_move.rs  delete.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  query.rs  update.rs
crates/dav/src/common/: acl.rs  lock.rs  mod.rs  propfind.rs  uri.rs
crates/dav/src/file/: copy_move.rs  delete.rs  get.rs  mkcol.rs  mod.rs  proppatch.rs  update.rs
crates/dav/src/principal/: matching.rs  mod.rs  propfind.rs  propsearch.rs
crates/directory/: Cargo.toml
crates/email/: Cargo.toml
crates/groupware/: Cargo.toml
crates/http/: Cargo.toml
crates/imap/: Cargo.toml
crates/integration-tests/: Cargo.toml  README.md  test-server-config.toml
crates/integration-tests/config-examples/: basic.toml  corporate.toml  development.toml  stress.toml
crates/integration-tests/src/: ai_integration.rs  auth.rs  config.rs  email.rs  lib.rs  metrics.rs  scenarios.rs  security.rs  stress.rs  utils.rs  web3_integration.rs
crates/jmap/: Cargo.toml
crates/kubernetes-operator/: Cargo.toml
crates/kubernetes-operator/src/: backup.rs  config.rs  controllers.rs  crd.rs  error.rs  lib.rs  manager.rs  metrics.rs  monitoring.rs  resources.rs  scaling.rs
crates/load-balancer/: Cargo.toml
crates/load-balancer/src/: algorithms.rs  backend.rs  config.rs  error.rs  health.rs  lib.rs  metrics.rs  proxy.rs  server.rs  session.rs  tls.rs
crates/main/: Cargo.toml
crates/managesieve/: Cargo.toml
crates/plugin-system/: Cargo.toml
crates/plugin-system/src/: lib.rs
crates/pop3/: Cargo.toml  README.md
crates/pop3/benches/: pop3_benchmarks.rs
crates/pop3/examples/: basic_usage.rs  pop3_config.toml
crates/pop3/src/: client.rs  config.rs  error.rs  lib.rs  mailbox.rs  monitoring.rs  security.rs  session.rs
crates/pop3/src/mailbox/: tests.rs
crates/pop3/src/op/: authenticate.rs  delete.rs  fetch.rs  list.rs  mod.rs
crates/pop3/src/protocol/: mod.rs  request.rs  response.rs
crates/pop3/tests/: integration_tests.rs
crates/sdk-generator/: Cargo.toml
crates/sdk-generator/src/: config.rs  documentation.rs  error.rs  generator.rs  graphql.rs  introspection.rs  languages.rs  lib.rs  openapi.rs  templates.rs
crates/service-mesh/: Cargo.toml
crates/service-mesh/src/: circuit_breaker.rs  config.rs  consul.rs  envoy.rs  error.rs  istio.rs  lib.rs  linkerd.rs  manager.rs  metrics.rs  observability.rs  security.rs  traffic.rs
crates/smtp/: Cargo.toml
crates/spam-filter/: Cargo.toml
crates/storage-replication/: Cargo.toml
crates/storage-replication/src/: config.rs  conflict.rs  error.rs  lib.rs  manager.rs  metrics.rs  node.rs  transport.rs
crates/store/: Cargo.toml  TESTING.md
crates/threat-detection/: Cargo.toml
crates/threat-detection/src/: anomaly.rs  behavioral.rs  config.rs  detector.rs  error.rs  intelligence.rs  lib.rs  models.rs  patterns.rs
crates/utils/: Cargo.toml
docs/: API_REFERENCE.md  PRODUCTION_DEPLOYMENT.md
docs/archive/: FINAL_PRODUCTION_CODE_SUMMARY.md  FINAL_PROJECT_REPORT.md  MISSING_FEATURES_ANALYSIS.md  PRODUCTION_CODE_COMPLETION_REPORT.md  PRODUCTION_COMPLETION_SUMMARY.md  PRODUCTION_ENHANCEMENT_SUMMARY.md  PROJECT_RENAME_SUMMARY.md  RELEASE_NOTES_TEMPLATE.md  RUST_BACKEND_TESTING_SUMMARY.md
resources/locales/: i18n.yml
resources/scripts/: ossify.py
scripts/: dev.sh
tests/: Cargo.toml
tests/src/: http_server.rs  lib.rs
(+922 files in other folders)
