[package]
name = "stalwart-api-gateway"
version = "0.1.0"
edition = "2021"
description = "API gateway functionality for Stalwart Mail Server"
license = "AGPL-3.0-only OR LicenseRef-SEL"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/mail-server"
homepage = "https://stalw.art"
keywords = ["api-gateway", "proxy", "routing", "rate-limiting", "authentication"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Async and networking
futures = "0.3"
async-trait = "0.1"

# HTTP server and client
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-service = "0.3"
tower-http = { version = "0.4", features = ["full"] }
axum = { version = "0.7", features = ["default"] }

# HTTP client for proxying
reqwest = { version = "0.11", features = ["json", "stream"] }

# Load balancing
tower-load-shed = "0.3"

# Rate limiting
# tower-governor = "0.0.4"  # Package not found
governor = "0.6"

# Authentication and authorization
jsonwebtoken = "9.0"
oauth2 = "4.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Metrics
prometheus = "0.13"

# Configuration
config = "0.13"

# Caching
moka = { version = "0.12", features = ["future"] }

# Internal dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

# [[bench]]
# name = "api_gateway_bench"
# harness = false

[features]
default = ["rate-limiting", "load-balancing", "authentication", "caching"]
rate-limiting = []
load-balancing = []
authentication = []
authorization = []
caching = []
compression = []
ssl-termination = []
request-transformation = []
response-transformation = []
circuit-breaker = []
