[package]
name = "cluster-management"
description = "Cluster management and coordination for Stalwart Mail Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["cluster", "distributed", "coordination", "mail-server"]
categories = ["network-programming", "database"]

[dependencies]
# Core dependencies
common = { path = "../common" }
store = { path = "../store" }
utils = { path = "../utils" }
trc = { path = "../trc" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Networking
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Consensus and coordination
raft = { version = "0.7", optional = true }
etcd-rs = { version = "1.0", optional = true }
consul = { version = "0.4", optional = true }

# Service discovery
dns-lookup = { version = "2.0", optional = true }
trust-dns-resolver = { version = "0.23", optional = true }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# Metrics and monitoring
metrics = "0.22"

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency and data structures
dashmap = "5.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography for node authentication
ring = { version = "0.17", optional = true }
base64 = "0.22"

# Network utilities
local-ip-address = "0.6"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = ["service-discovery", "health-checks"]
raft-consensus = ["raft"]
etcd-backend = ["etcd-rs"]
consul-backend = ["consul"]
service-discovery = ["dns-lookup", "trust-dns-resolver"]
health-checks = []
node-authentication = ["ring"]
