[package]
name = "stalwart-compliance"
version = "0.1.0"
edition = "2021"
description = "GDPR, HIPAA and other compliance management for Stalwart Mail Server"
license = "AGPL-3.0-only OR LicenseRef-SEL"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/mail-server"
homepage = "https://stalw.art"
keywords = ["compliance", "gdpr", "hipaa", "privacy", "audit"]
categories = ["security", "privacy"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Async and networking
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography for data protection
ring = "0.17"
base64 = "0.22"

# Regular expressions for data classification
regex = "1.0"

# Database for audit logs (disabled for now to avoid conflicts)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Internal dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

# [[bench]]
# name = "compliance_bench"
# harness = false

[features]
default = ["gdpr", "hipaa", "audit-logging", "data-classification"]
gdpr = []
hipaa = []
ccpa = []
sox = []
audit-logging = []
data-classification = []
retention-policies = []
encryption-at-rest = []
