[package]
name = "stalwart-integration-tests"
version = "0.1.0"
edition = "2021"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
description = "Comprehensive integration and stress tests for Stalwart Mail Server"
license = "AGPL-3.0-only"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
async-trait = "0.1"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Email protocols
lettre = { version = "0.11", features = ["smtp-transport", "pool", "hostname", "builder"] }
imap = "2.4"
pop3 = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
fake = { version = "2.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"

# Database testing
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "sqlite", "mysql"] }

# TLS and security
rustls = "0.21"
rustls-pemfile = "1.0"

# Configuration
config = "0.13"

# Local dependencies
common = { path = "../common" }
directory = { path = "../directory" }
jmap = { path = "../jmap" }
imap-proto = { path = "../imap" }
smtp = { path = "../smtp" }
stalwart-threat-detection = { path = "../threat-detection" }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.5"

[[bin]]
name = "stress-test"
path = "src/bin/stress_test.rs"

[[bin]]
name = "scenario-test"
path = "src/bin/scenario_test.rs"

[[bin]]
name = "load-test"
path = "src/bin/load_test.rs"

[[bench]]
name = "email_throughput"
harness = false

[[bench]]
name = "concurrent_users"
harness = false

[[bench]]
name = "protocol_performance"
harness = false

[features]
default = ["full-tests"]
full-tests = ["stress-tests", "integration-tests", "performance-tests"]
stress-tests = []
integration-tests = []
performance-tests = []
threat-detection-tests = []
