[package]
name = "stalwart-integration-tests"
version = "0.1.0"
edition = "2021"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
description = "Comprehensive integration and stress tests for Stalwart Mail Server"
license = "AGPL-3.0-only"

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"
futures = "0.3"
async-trait = "0.1"

# HTTP and networking
reqwest = { version = "0.11", features = ["json", "stream"] }
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"

# Email protocols
lettre = { version = "0.11", features = ["smtp-transport", "pool", "hostname", "builder"] }
imap = "2.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Testing utilities
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
quickcheck = "1.0"
fake = { version = "2.5", features = ["derive"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
regex = "1.0"
num_cpus = "1.0"
anyhow = "1.0"
thiserror = "1.0"

# Metrics and monitoring
prometheus = "0.13"
metrics = "0.21"



# TLS and security
rustls = "0.21"
rustls-pemfile = "1.0"

# Configuration
config = "0.13"

# Local dependencies
common = { path = "../common" }
directory = { path = "../directory" }
jmap = { path = "../jmap" }
imap_proto = { path = "../imap-proto" }
smtp = { path = "../smtp" }
utils = { path = "../utils" }
trc = { path = "../trc" }

[dev-dependencies]
tempfile = "3.0"
wiremock = "0.5"

[[bin]]
name = "stress-test"
path = "src/bin/stress_test.rs"

[[bin]]
name = "integration-test"
path = "src/bin/integration_test.rs"



[features]
default = ["full-tests"]
full-tests = ["stress-tests", "integration-tests", "performance-tests"]
stress-tests = []
integration-tests = []
performance-tests = []
threat-detection-tests = []
