[package]
name = "stalwart-kubernetes-operator"
version = "0.1.0"
edition = "2021"
description = "Kubernetes operator for Stalwart Mail Server"
license = "AGPL-3.0-only OR LicenseRef-SEL"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/mail-server"
homepage = "https://stalw.art"
keywords = ["kubernetes", "operator", "k8s", "cloud-native", "orchestration"]
categories = ["cloud", "orchestration"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Async and networking
futures = "0.3"
async-trait = "0.1"

# Kubernetes client and API
kube = { version = "0.87", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }

# Controller runtime
kube-runtime = "0.87"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.13"

# Metrics
prometheus = "0.13"

# Internal dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
criterion = "0.5"

# [[bench]]
# name = "operator_bench"
# harness = false

[features]
default = ["crd-management", "auto-scaling", "backup-automation"]
crd-management = []
auto-scaling = []
backup-automation = []
monitoring-integration = []
service-mesh-integration = []
cert-management = []
