[package]
name = "load-balancer"
description = "High-performance load balancer for Stalwart Mail Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["load-balancer", "proxy", "high-availability", "mail-server"]
categories = ["network-programming", "web-programming"]

[dependencies]
# Core dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

# Async runtime and networking
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3"

# HTTP and networking
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
bytes = "1.0"
futures = "0.3"
pin-project = "1.0"
async-trait = "0.1"

# Load balancing algorithms
consistent_hash = { version = "0.1", optional = true }
rand = "0.8"
# weighted = "0.3"  # Package not found, using alternative

# Health checking
reqwest = { version = "0.12", features = ["json"] }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Metrics and monitoring
metrics = "0.22"
prometheus = { version = "0.13", features = ["process"], optional = true }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency
dashmap = "5.0"
parking_lot = "0.12"

# TLS support
rustls = { version = "0.23", optional = true }
tokio-rustls = { version = "0.26", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
wiremock = "0.6"

[features]
default = ["health-checks", "metrics", "tls"]
health-checks = []
metrics = ["prometheus"]
tls = ["rustls", "tokio-rustls"]
session-affinity = ["consistent_hash"]
