[package]
name = "plugin-system"
description = "Dynamic plugin system for Stalwart Mail Server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["plugin", "dynamic", "extensibility", "mail-server"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Core dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Dynamic loading
libloading = { version = "0.8", optional = true }
dlopen2 = { version = "0.7", optional = true }

# WebAssembly support
wasmtime = { version = "24.0", optional = true }
wasi-common = { version = "24.0", optional = true }

# Scripting languages
rhai = { version = "1.19", optional = true }
mlua = { version = "0.9", features = ["lua54", "async"], optional = true }

# Configuration and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Plugin manifest and metadata
semver = { version = "1.0", features = ["serde"] }

# Security and sandboxing
nix = { version = "0.29", optional = true }
seccomp = { version = "0.1", optional = true }

# Logging
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency and data structures
dashmap = "5.0"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4", "serde"] }

# File system operations
walkdir = "2.0"
tempfile = "3.0"

# Checksums and verification
sha2 = "0.10"
blake3 = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"

[features]
default = ["native-plugins", "rhai-scripts"]
native-plugins = ["libloading", "dlopen2"]
wasm-plugins = ["wasmtime", "wasi-common"]
rhai-scripts = ["rhai"]
lua-scripts = ["mlua"]
script-plugins = ["rhai-scripts", "lua-scripts"]
sandboxing = ["nix", "seccomp"]
