[package]
name = "stalwart-sdk-generator"
version = "0.1.0"
edition = "2021"
description = "Multi-language SDK generator for Stalwart Mail Server"
license = "AGPL-3.0-only OR LicenseRef-SEL"
authors = ["Stalwart Labs Ltd. <hello@stalw.art>"]
repository = "https://github.com/stalwartlabs/mail-server"
homepage = "https://stalw.art"
keywords = ["sdk", "generator", "api", "client", "codegen"]
categories = ["development-tools", "api-bindings"]

[dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"

# Async and networking
futures = "0.3"
async-trait = "0.1"

# Template engine
handlebars = "4.0"
tera = "1.0"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# OpenAPI/Swagger support
openapiv3 = "2.0"

# File system operations
walkdir = "2.0"
tempfile = "3.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# HTTP client for API introspection
reqwest = { version = "0.11", features = ["json"] }

# Internal dependencies
common = { path = "../common" }
utils = { path = "../utils" }
trc = { path = "../trc" }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# [[bench]]
# name = "sdk_generation_bench"
# harness = false

[features]
default = ["rust-sdk", "python-sdk", "javascript-sdk", "openapi-spec"]
rust-sdk = []
python-sdk = []
javascript-sdk = []
typescript-sdk = []
go-sdk = []
java-sdk = []
csharp-sdk = []
php-sdk = []
openapi-spec = []
graphql-schema = []
